// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render as checked 1`] = `
<Fragment>
  <RippledComponent
    checked={true}
    className="checkbox"
    disabled={false}
    indeterminate={false}
    name="mockName"
    nativeControlId="mockName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;

exports[`Checkbox should render as disabled 1`] = `
<Fragment>
  <RippledComponent
    checked={true}
    className="checkbox"
    disabled={true}
    indeterminate={false}
    name="mockName"
    nativeControlId="mockName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;

exports[`Checkbox should render with a label 1`] = `
<Fragment>
  <RippledComponent
    checked={false}
    className="checkbox"
    disabled={true}
    indeterminate={false}
    name="mockName"
    nativeControlId="mockName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;

exports[`Checkbox should render with the correct props 1`] = `
<Fragment>
  <RippledComponent
    checked={false}
    className="checkbox"
    disabled={false}
    indeterminate={false}
    name="mockName"
    nativeControlId="mockName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;

exports[`Checkbox should set the name and id props correctly 1`] = `
<Fragment>
  <RippledComponent
    checked={false}
    className="checkbox"
    disabled={false}
    indeterminate={false}
    name="mockName"
    nativeControlId="mockId"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;

exports[`Checkbox should set the name and id props correctly 2`] = `
<Fragment>
  <RippledComponent
    checked={false}
    className="checkbox"
    disabled={false}
    indeterminate={false}
    name="mockId"
    nativeControlId="mockId"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    unbounded={true}
  />
</Fragment>
`;
